css tweaks for responsiveness

--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -9,7 +9,8 @@ margin-top:0px;
 padding-top:30px;
 padding-bottom:30px;
 overflow:hidden;
-
+padding-left:15px;
+padding-right:15px;
 
 
 .quote-slide {
