--- a/app/views/projects/_list.html.haml
+++ b/app/views/projects/_list.html.haml
@@ -1,7 +1,7 @@
 %section#featured-projects
   %h2.star-header
     Featured Projects
-    = link_to 'See More Case Studies', "#", :class => "a-button"
+    = link_to 'See More Case Studies', "projects/", :class => "a-button"
           
 
 %div.featured_projects.row
