mobile view of about page

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -713,6 +713,9 @@ section#team ul{
   overflow:hidden !important;
   display:inline-block !important;
   }
+  #team ul li {
+  height:271px;
+  }
 }
 
 section#team ul li{
