--- a/app/views/projects/_project.html.haml
+++ b/app/views/projects/_project.html.haml
@@ -2,9 +2,7 @@
   =image_tag p.picture_url if p.picture?
   .overlay
     .link-wrapper
-      %a.view{:href => "#"}
-      .separator
-      %a.case{:href => "#"}
+      %a.link-to-the-project{:href => "#", "data-reveal-id" => "modal#{i}"}
 - if admin_signed_in?
   .admin_bar
     %ul.link-list
