--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -70,3 +70,19 @@ padding:10px;
           }
         }
 }
+
+
+.link-to-the-project {
+  background: url(folio_link.png) no-repeat;
+  width: 78px;
+  height:78px;
+  margin:auto;
+  margin-top:10px;
+  content:' ';
+  display:block;
+  
+  &:hover {
+  background-position:-78px 0px;
+  }
+
+}
