small but _important js improvement

--- a/app/views/home/services.html.haml
+++ b/app/views/home/services.html.haml
@@ -28,29 +28,29 @@
 
 .services
   .row
-    .two.columns.mobile-one
+    .two.columns
       %a.circle
         .icon.agile-icon
 
-    .ten.columns.mobile-three
+    .ten.columns
       %h5{editable("services 11")}
         =content("services 11")
       %p{editable("services 12")}
         =content("services 12")
   .row
-    .two.columns.mobile-one
+    .two.columns
       %a.circle
         .icon.ruby-icon
-    .ten.columns.mobile-three
+    .ten.columns
       %h5{editable("services 13")}
         =content("services 13")
       %p{editable("services 14")}
         =content("services 14")
   .row
-    .two.columns.mobile-one
+    .two.columns
       %a.circle
         .icon.test-driven-icon
-    .ten.columns.mobile-three
+    .ten.columns
       %h5{editable("services 15")}
         =content("services 15")
       %p{editable("services 16")}
@@ -63,28 +63,28 @@
 
 .services
   .row
-    .two.columns.mobile-one
+    .two.columns
       %a.circle
         .icon.design-small-icon
-    .ten.columns.mobile-three
+    .ten.columns
       %h5{editable("services 21")}
         =content("services 21")      
       %p{editable("services 22")}
         =content("services 22")
   .row
-    .two.columns.mobile-one
+    .two.columns
       %a.circle
         .icon.global-icon
-    .ten.columns.mobile-three
+    .ten.columns
       %h5{editable("services 23")}
         =content("services 23")      
       %p{editable("services 24")}
         =content("services 24")
   .row
-    .two.columns.mobile-one
+    .two.columns
       %a.circle
         .icon.access-icon
-    .ten.columns.mobile-three
+    .ten.columns
       %h5{editable("services 25")}
         =content("services 25")
       %p{editable("services 26")}
