--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,7 @@
 = render :partial => "home/slider"
 
 
-.divider
+.divider.homepage
 
 %div#features.row
   %div.feature.four.columns
@@ -53,3 +53,8 @@
 = render 'get_a_proposal'
 
 .divider
+
+
+= javascript_include_tag "home/animation"
+
+
