--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -494,8 +494,10 @@ background: image-url("footer_tag.png");
 
 .highlight {
 background: black !important;
+padding:15px;
 }
 
 code {
+padding:5px;
 background:black !important;
 }
