--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -18,7 +18,7 @@
                 %h2
                   = link_to post.title, post
                 %p
-                  = preserve post.preview.html_safe
+                  = preserve post.preview_html.html_safe
                 .links
                   = link_to "Read more", post, :class => "read-more"
                   |
