--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -64,7 +64,7 @@ padding-bottom:50px;
     img {
     float:left;
     }
-    h2, h3 {
+    h2, h3, p {
     padding-left:100px;
     }
   
@@ -126,6 +126,10 @@ text-align:center;
 }
 }
 
+
+.about-stats a {
+color:#004264;
+}
 
 #folk-slider {
 .content h1 {
