--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -18,7 +18,7 @@
           %h3 Tracks played
           %h2 3,645
           %p
-            %a.html{:href => "http://turntable.fm/salad_labs"} http://turntable.fm/salad_labs
+            %a{:href => "http://turntable.fm/salad_labs"} http://turntable.fm/salad_labs
       .four.columns
         .food.b
           %img{:alt => "", :src => "/assets/food.png"}
