--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -1,8 +1,17 @@
-.services p {
-display: block;
-color: gray;
-font-family: "Droid Serif", serif;
-font-size:13px;
+.services {
+  
+  p {
+  display: block;
+  color: gray;
+  font-family: "Droid Serif", serif;
+  font-size:13px;
+  }
+
+  h5 {
+  text-transform:uppercase;
+  font-size:18px;
+  }
+  
 }
 
 @media only screen and (min-width:960px) {
@@ -156,6 +165,17 @@ position:relative;
   position:absolute;
   right:5px;
   top:20px;
+  }
+
+}
+
+@media only screen and (min-width: 960px) {
+  
+  .star-header {
+    .a-button {
+    right:0px !important;
+    margin-right:0px;
+    }
   }
 
 }
