twitter icon change

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -24,7 +24,7 @@ border-top:2px solid #1588C3;
 border-bottom:1px solid #004264;
 font: bold 18px 'PT Sans', sans-serif;
 color: white;
-background: url(tweet.png) no-repeat 0px 4px;
+background: url(twitter_footer.png) no-repeat 0px 3px;
 text-transform:none;
 position:relative;
 p {
