--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
   %body
     .save_button
       Save!
-    %div.container
+    %div.container.main-container
       %div#header.row
         - if admin_signed_in?
           = render "layouts/admin_menu"
