--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -73,4 +73,4 @@
         |
         %a{:href => services_path} Services
         |
-        = mail_to "info@coshx.com", "Contact"
+        = link_to "Contact", contact_path
