--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -34,14 +34,11 @@
       =content("contact heading")
     %div.contact-details.row
       .three.columns
-        %strong Tel:
-        007-042-1408
+        %strong San Francisco
         %br/
-        %strong Fax:
-        007-042-1409
+        1211 Folsom Street, 3rd Floor
         %br/
-        %strong Email:
-        = mail_to "info@coshx.com", "info@coshx.com", :id => "contact-email"
+        San Francisco, CA 94103
         %br/
       .three.columns
         %strong Charlottesville
