--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -62,6 +62,28 @@ color: #004264;
 
 .post-show {
 padding: 0px 10px;
+
+
+h1 {
+font: bold 60px 'PT Sans', sans-serif;
+}
+h4 {
+font: 30px normal "Droid Serif", serif;
+}
+p {
+font: 18px normal "Droid Serif", serif;
+line-height:150%;
+}
+.gray {
+color: $gray;
+}
+h3, h2 {
+font: 30px normal "Droid Serif", serif;
+color:$gray;
+line-height:170%;
+}
+
+
 }
 
 .share-buttons {
