Change some mailto links to point to contact page

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -57,7 +57,7 @@
         CONSIDERING COSHX FOR
         %br/
         YOUR NEXT PROJECT?<br>
-        = link_to "mailto:info@coshx.com?subject=Coshx%20Labs%20quote%20request", :class => "the-button" do
+        = link_to contact_path(:anchor => "quote"), :class => "the-button" do
           Get a Proposal
     .footer-bottom
       %span.copy Copyright © 2012 Coshx Labs. All rights reserved
