--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -36,11 +36,10 @@
   %p{editable("frontpage_contact_text")}
     =content("frontpage_contact_text")
 
-  -# Normally we'd use mail_to and not link_to for an email link, but this will eventually open a form, not be a mailto
-  = link_to "mailto:info@coshx.com", :class => ["first", "a-button"] do
+  = link_to contact_path, :class => ["first", "a-button"] do
     Contact Us
 
-  = link_to "mailto:info@coshx.com?subject=Coshx%20Labs%20quote%20request", :class => "a-button white" do
+  = link_to contact_path(:anchor => "quote"), :class => "a-button white" do
     Request a FREE Quote
 
 
