Add email address back to footer

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -30,8 +30,9 @@
         = link_to "https://www.twitter.com/coshxlabs", :class => "a-button darkblue" do
           Follow Us
     
-    %h2.contact-heading{editable("contact heading")}
-      =content("contact heading")
+    %h2.contact-heading
+      Shoot us an email at
+      = link_to "info@coshx.com", "mailto:info@coshx.com"
     %div.contact-details.row      
       .three.columns
         %strong Boulder
