--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -317,9 +317,15 @@ overflow:hidden;
 
 
   h2.contact-heading {
-  font: bold 24px/70px "PT Sans",sans-serif;
-  text-align: center;
-  color: #004264;
+    font: bold 24px/70px "PT Sans",sans-serif;
+    text-align: center;
+    color: #004264;
+    a {
+      color: #ffffff;
+      &:hover {
+        color: #A6A6A6;
+      }
+    }
   }
 
   
