Hover color for email link is black

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -323,7 +323,7 @@ overflow:hidden;
     a {
       color: #ffffff;
       &:hover {
-        color: #A6A6A6;
+        color: #000000;
       }
     }
   }
