Upcase contact heading

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -301,6 +301,7 @@ footer {
   h2.contact-heading {
     font: bold 24px/70px "PT Sans",sans-serif;
     text-align: center;
+    text-transform: uppercase;
     color: #004264;
     a {
       color: #ffffff;
