--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -10,6 +10,9 @@
     = f.label :title
     = f.text_field :title
   .field
+    = f.label :url
+    = f.text_field :url
+  .field
     = f.label :description
     = f.text_area :description
   .field
