--- a/app/views/projects/_project.html.haml
+++ b/app/views/projects/_project.html.haml
@@ -2,7 +2,7 @@
   =image_tag p.picture_url if p.picture?
   .overlay
     .link-wrapper
-      %a.link-to-the-project{:href => "#", "data-reveal-id" => "modal#{i}"}
+      %a.link-to-the-project{:href => p.url}
 - if admin_signed_in?
   .admin_bar
     %ul.link-list
