--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -83,7 +83,7 @@
           %p
             = person.name
     %li.last
-      %a{:href => "#"} 
+      %a{:href => '#', 'data-reveal-id' => 'jobs'}
         .new
         = image_tag("team/new.png", :mouseover => "team/new-white.png")
         %p
