--- a/app/views/home/services.html.haml
+++ b/app/views/home/services.html.haml
@@ -30,7 +30,7 @@
   .row
     .two.columns
       %a.circle
-        .icon.agile-icon
+        .icon.one-icon
 
     .ten.columns
       %h5{editable("services 11")}
@@ -40,7 +40,7 @@
   .row
     .two.columns
       %a.circle
-        .icon.ruby-icon
+        .icon.two-icon
     .ten.columns
       %h5{editable("services 13")}
         =content("services 13")
@@ -49,7 +49,7 @@
   .row
     .two.columns
       %a.circle
-        .icon.test-driven-icon
+        .icon.three-icon
     .ten.columns
       %h5{editable("services 15")}
         =content("services 15")
@@ -59,7 +59,7 @@
   .row
     .two.columns
       %a.circle
-        .icon.design-small-icon
+        .icon.four-icon
     .ten.columns
       %h5{editable("services 21")}
         =content("services 21")      
@@ -68,7 +68,7 @@
   .row
     .two.columns
       %a.circle
-        .icon.global-icon
+        .icon.five-icon
     .ten.columns
       %h5{editable("services 23")}
         =content("services 23")      
@@ -77,7 +77,7 @@
   .row
     .two.columns
       %a.circle
-        .icon.access-icon
+        .icon.six-icon
     .ten.columns
       %h5{editable("services 25")}
         =content("services 25")
