Fix twitter functionality, tweak styles

--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -183,8 +183,20 @@ $gray: #a6a6a6;
     position: absolute;
     right: 5px;
     top: 17px;
+    color: #ffffff;
   }
 
+  a {
+    color: #004264;
+
+    &:hover {
+      color: #333333;
+    }
+  }
+
+  p {
+    font-family: "Droid Serif",serif;
+  }
 }
 
 @media only screen and (min-width: 960px) {
