--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -25,7 +25,7 @@
                   %a.comments{:href => "#{polymorphic_url(post)}#disqus_thread"}
        
     .row
-      %h2.star-header
+      %h2.star-header#footer-tweet
         %p Last tweets
         = link_to "https://www.twitter.com/coshxlabs", :class => "a-button darkblue" do
           Follow Us
