--- a/app/views/home/profile.html.haml
+++ b/app/views/home/profile.html.haml
@@ -6,63 +6,5 @@
     %div.slide{:id => of.slug}
       =render :partial => "folk", :locals => {:folk => of}
       
-
-  
-:javascript
-  $(document).ready ( function () {
-    $('#folk-slider').orbit({
-      animation: 'horizontal-push',                  // fade, horizontal-slide, vertical-slide, horizontal-push
-      animationSpeed: 800,                // how fast animtions are
-      timer: false, 			 // true or false to have the timer
-      resetTimerOnClick: false,           // true resets the timer instead of pausing slideshow progress
-      advanceSpeed: 4000, 		 // if timer is enabled, time between transitions 
-      pauseOnHover: false, 		 // if you hover pauses the slider
-      startClockOnMouseOut: false, 	 // if clock should start on MouseOut
-      startClockOnMouseOutAfter: 1000, 	 // how long after MouseOut should the timer start again
-      directionalNav: true, 		 // manual advancing directional navs
-      captions: true, 			 // do you want captions?
-      captionAnimation: 'fade', 		 // fade, slideOpen, none
-      captionAnimationSpeed: 800, 	 // if so how quickly should they animate in
-      bullets: false,			 // true or false to activate the bullet navigation
-      bulletThumbs: false,		 // thumbnails for the bullets
-      bulletThumbLocation: '',		 // location from this file where thumbs will be
-      afterSlideChange: function() {
-    
-        $(".slide").each(function () {
-          if ($(this).css("zIndex") == 3) {
-            history.pushState(null,"123", "" + $(this).attr("id"));
-          }
-        });  
-    
-      }, 	 // empty function    fluid: true       // or set a aspect ratio for content slides (ex: '4x3') 
-  });});
-  
-  
-:javascript
-  function sliderNav() {
-    w = $("body .row:first-child").width();
-    b = $("body").width();
-    $(".slider-nav .left").stop().animate({left: -1 * Math.floor((b-w)/2)}, 1500);
-    $(".slider-nav .right").stop().animate({right: -1 * Math.floor((b-w)/2)}, 1500);
-  }
-  
-  $(document).ready( function () {
- 
-    sliderNav();
-    $(window).resize(function() {
-      sliderNav();
-    });
-  
-    $("body").keydown(function(e) {
-      if(e.keyCode == 37) {
-        $(".slider-nav .left").click();
-      }
-      else if(e.keyCode == 39) {
-        $(".slider-nav .right").click();
-      }
-    });
-  
-  });
-
-
-
+%script(type="text/javascript")
+  = render :partial => "home/slider.js", :locals => { :slider_id => "folk-slider", :afterSlideChange => '$(".slide").each(function() { if ($(this).css("zIndex") == 3) { history.pushState(null, "123", "" + $(this).attr("id")); }});'}
