--- a/app/views/home/_folk.html.haml
+++ b/app/views/home/_folk.html.haml
@@ -10,7 +10,7 @@
 
   .six.columns.pull-six
     .content
-      .folk_header
+      .folk_header=folk.nickname
       %h1=folk.name
       %p.folk_bio=folk.bio.html_safe
       
