add edit_nickname to edit_admin

--- a/app/views/admins/edit.html.haml
+++ b/app/views/admins/edit.html.haml
@@ -24,6 +24,10 @@
       %h4.title Other
       .content
         =text_field_tag(:quote, current_admin.quote)
+    %li
+      %h4.title nickname
+      .content
+        =text_field_tag(:nickname, current_admin.nickname)
       
     
 
