--- a/app/views/admins/edit.html.haml
+++ b/app/views/admins/edit.html.haml
@@ -27,8 +27,7 @@
     %li
       %h4.title nickname
       .content
-        =text_field_tag(:nickname, current_admin.nickname)
-      
+        Nickname is editable through contenteditable      
     
 
   =submit_tag("Save my data!", :class => 'large button')
