CTA goes to services

--- a/app/views/home/_slider.html.haml
+++ b/app/views/home/_slider.html.haml
@@ -13,7 +13,7 @@
       
       .divider
 
-      = link_to "#", :class => "the-button" do
+      = link_to "/services", :class => "the-button" do
         Read About How We Craft Software
 
   %div.slide.second-slide
@@ -26,7 +26,7 @@
       
       .divider
 
-      = link_to "#", :class => "the-button" do
+      = link_to "/services", :class => "the-button" do
         Read About How We Craft Software
 
 
@@ -40,7 +40,7 @@
       
       .divider
 
-      = link_to "#", :class => "the-button" do
+      = link_to "/services", :class => "the-button" do
         Read About How We Craft Software
 
 %script(type="text/javascript")
