--- a/app/views/home/services.html.haml
+++ b/app/views/home/services.html.haml
@@ -1,4 +1,3 @@
-
 %h1.centre WE ARE ALL ABOUT THE WEB
 %p.graytext.centre Let's start up a conversation about what you need and how we can help. We're just a quick email away!
 
@@ -14,14 +13,14 @@
     %a.circle.circle2
       .icon.design-icon
     %a.circle.circle3
-      .icon      
+      .icon
     %a.circle.circle4
       .icon.develop-icon
     %a.circle.circle5
       .icon.produce-icon
     %a.middle
       .icon.process-icon
-    
+
 .row
   %h2.star-header
     Web Development
@@ -33,59 +32,43 @@
         .icon.one-icon
 
     .ten.columns
-      %h5{editable("services 11")}
-        =content("services 11")
-      %p{editable("services 12")}
-        =content("services 12")
+      = ceditable "services 11", "h5"
+      = ceditable "services 12", "p"
   .row
     .two.columns
       %a.circle
         .icon.two-icon
     .ten.columns
-      %h5{editable("services 13")}
-        =content("services 13")
-      %p{editable("services 14")}
-        =content("services 14")
+      = ceditable "services 13", "h5"
+      = ceditable "services 14", "p"
   .row
     .two.columns
       %a.circle
         .icon.three-icon
     .ten.columns
-      %h5{editable("services 15")}
-        =content("services 15")
-      %p{editable("services 16")}
-        =content("services 16")
-    
+      = ceditable "services 15", "h5"
+      = ceditable "services 16", "p"
+
   .row
     .two.columns
       %a.circle
         .icon.four-icon
     .ten.columns
-      %h5{editable("services 21")}
-        =content("services 21")      
-      %p{editable("services 22")}
-        =content("services 22")
+      = ceditable "services 21", "h5"
+      = ceditable "services 22", "p"
   .row
     .two.columns
       %a.circle
         .icon.five-icon
     .ten.columns
-      %h5{editable("services 23")}
-        =content("services 23")      
-      %p{editable("services 24")}
-        =content("services 24")
+      = ceditable "services 23", "h5"
+      = ceditable "services 24", "p"
   .row
     .two.columns
       %a.circle
         .icon.six-icon
     .ten.columns
-      %h5{editable("services 25")}
-        =content("services 25")
-      %p{editable("services 26")}
-        =content("services 26")
-
+      = ceditable "services 25", "h5"
+      = ceditable "services 26", "p"
 
 = render 'get_a_proposal'
-
-
-
