--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     = render "layouts/fonts"
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
+    = contenteditable_assets
     %meta(content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, initial-scale=1.0" name="viewport")/
     = csrf_meta_tags
     = render "layouts/google_analytics"
@@ -13,8 +14,7 @@
     = auto_discovery_link_tag :atom, "/feed"
     = favicon_link_tag
   %body
-    .save_button
-      Save!
+    = save_button
     %div.container.main-container
       %div#header.row
         - if admin_signed_in?
