--- a/app/views/home/contact_us.html.haml
+++ b/app/views/home/contact_us.html.haml
@@ -1,21 +1,18 @@
-
-%h1.centre{editable("contact page title")}
-  =content("contact page title")
-%p.graytext.centre{editable("contact page text")}
-  =content("contact page text")
+= ceditable "contact page title", "h1", :class => "centre"
+= ceditable "contact page text", "p", :class => "graytext centre"
 
 .short-white-line
 
 %dl.tabs.message-tabs
   %dd.active.left-tab
-    %a{:href => "#contact"} 
+    %a{:href => "#contact"}
       %h5 CONTACT US
       %p I would just like to say "Hi!"
   %dd.right-tab
-    %a{:href => "#quote"} 
+    %a{:href => "#quote"}
       %h5 REQUEST A QUOTE
       %p I would just like to say "Hi!"
-    
+
 ="</div></div>".html_safe
 .container.bluu
   .row
@@ -27,10 +24,5 @@
 
 ="<div class='container'><div class='row with_maps'>".html_safe
 
-
 =render "maps"
-
-
-
-  
 
