Update Career button.

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,5 +1,8 @@
-%a.jobs{:href => '#', 'data-reveal-id' => 'jobs'}
-  CAREERS
+/ %a.jobs{:href => '#', 'data-reveal-id' => 'jobs'}
+/   CAREERS
+
+= link_to "CAREERS", jobs_path, :class => 'jobs'
+  
   
 .logo-banner
   %a#logo{:href => root_path}
