Gets nickname from admin model instead of content editable

--- a/app/views/home/_folk.html.haml
+++ b/app/views/home/_folk.html.haml
@@ -7,7 +7,7 @@
 
   .six.columns.pull-six
     .content
-      = ceditable "nickname of " + folk.name, "div", :class => "folk_header"
+      .folk_header= folk.nickname
       %h1=folk.name
       %p.folk_bio=folk.bio.html_safe
 
